--- a/app/steps/ui/applicant/relationshiptodeceased/template.html
+++ b/app/steps/ui/applicant/relationshiptodeceased/template.html
@@ -52,7 +52,7 @@
         name: "relationshipToDeceased",
         fieldset: {
             legend: {
-                text: content.question | safe,
+                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
