add missing 'or' in new options, make existing 'or' translate.

--- a/app/steps/ui/applicant/relationshiptodeceased/template.html
+++ b/app/steps/ui/applicant/relationshiptodeceased/template.html
@@ -40,6 +40,10 @@
 {% endif %}
 
 {% set answers = (answers.push({
+    divider: content["or"] | safe,
+}, answers) %}
+
+{% set answers = (answers.push({
     value: "optionOther",
     text: content["optionOther"] | safe,
     checked: true if fields.relationshipToDeceased.value == "optionOther"
