New stop handling.
Needs actual content but figure get this out and put the real content in later.

--- a/app/steps/ui/applicant/relationshiptodeceased/template.html
+++ b/app/steps/ui/applicant/relationshiptodeceased/template.html
@@ -40,8 +40,8 @@
 {% endif %}
 
 {% set answers = (answers.push({
-    divider: content["or"] | safe,
-}, answers) %}
+    divider: content["or"] | safe
+}), answers) %}
 
 {% set answers = (answers.push({
     value: "optionOther",
