--- a/app/steps/ui/iht/unusedallowanceclaimed/template.html
+++ b/app/steps/ui/iht/unusedallowanceclaimed/template.html
@@ -9,12 +9,13 @@
 {% block form_content %}
     {% call govukFieldset({
         legend: {
-        text: content.question | safe,
+        text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
         isPageHeading: true,
         classes: "govuk-fieldset__legend--l"
         }
     }) %}
-    <p class="govuk-body">{{ content.hint | safe }}</p>
+    <p class="govuk-body">{{ content.hint1 | safe }}</p>
+    <p class="govuk-body">{{ content.hint2 | replace("{deceasedName}", fields.deceasedName.value) | safe }}</p>
     {{ govukRadios({
             classes: "govuk-radios--inline",
             idPrefix: "unusedAllowanceClaimed",
