syntax error in template.

--- a/app/steps/ui/screeners/relatedtodeceased/template.html
+++ b/app/steps/ui/screeners/relatedtodeceased/template.html
@@ -57,7 +57,7 @@
                 }
             },
             {
-                divider: content["or"] | safe,
+                divider: content["or"] | safe
             },
             {
                 value: "optionNo",
