--- a/app/steps/ui/deceased/anyotherchildren/template.html
+++ b/app/steps/ui/deceased/anyotherchildren/template.html
@@ -2,20 +2,30 @@
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 
 {% block form_content %}
+    {% call govukFieldset({
+        legend: {
+            text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
+            classes: "govuk-fieldset__legend--l",
+            isPageHeading: true
+    }
+    }) %}
+    <p class="govuk-body">{{ content.paragraph1 | replace("{deceasedName}", fields.deceasedName.value) | safe }}</p>
+    <p class="govuk-body">
+        <ul class="govuk-list govuk-list--bullet">
+            <li>{{ content.listItem1 | safe }}</li>
+            <li>{{ content.listItem2 | replace("{deceasedName}", fields.deceasedName.value) | safe }}</li>
+        </ul>
+    </p>
+    <p class="govuk-body">{{ content.paragraph2 | safe }}</p>
     {{ govukRadios({
         classes: "govuk-radios--inline",
         idPrefix: "anyOtherChildren",
         name: "anyOtherChildren",
-        fieldset: {
-            legend: {
-                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
-                isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
-            }
-        },
-        errorMessage: { text: fields.anyOtherChildren.errorMessage | safe } if fields.anyOtherChildren.errorMessage,
+        errorMessage: { text: fields.anyOtherChildren.errorMessage
+            | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.anyOtherChildren.errorMessage,
         items: [
             {
                 value: "optionYes",
@@ -29,6 +39,7 @@
             }
         ]
     }) }}
+    {% endcall %}
 
     <div class="govuk-form-group">
         {{ govukButton({
