--- a/app/steps/ui/deceased/allchildrenover18/template.html
+++ b/app/steps/ui/deceased/allchildrenover18/template.html
@@ -2,22 +2,21 @@
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 
 {% block form_content %}
+    {% call govukFieldset({
+        legend: {
+            text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
+            classes: "govuk-fieldset__legend--l",
+            isPageHeading: true
+        }
+    }) %}
+    <p class="govuk-body">{{ content.paragraph | replace("{deceasedName}", fields.deceasedName.value) | safe }}</p>
     {{ govukRadios({
         classes: "govuk-radios--inline",
         idPrefix: "allChildrenOver18",
         name: "allChildrenOver18",
-        fieldset: {
-            legend: {
-                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
-                isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
-            }
-        },
-        hint: {
-            text: content.hint | safe
-        },
         errorMessage: { text: fields.allChildrenOver18.errorMessage | safe } if fields.allChildrenOver18.errorMessage,
         items: [
             {
@@ -32,6 +31,7 @@
             }
         ]
     }) }}
+    {% endcall %}
 
     <div class="govuk-form-group">
         {{ govukButton({
