--- a/app/steps/ui/executors/jointapplication/template.html
+++ b/app/steps/ui/executors/jointapplication/template.html
@@ -29,12 +29,11 @@
       value: { text: executor.fullName | safe },
       actions: {
       items: [{
-        href: "#",
+        href: '/remove-coApplicant/' + loop.index0,
         text: content.removeAction | safe,
         visuallyHiddenText: executor.fullName | safe,
         attributes: {
-          'data-executor-index': loop.index0,
-          formaction: "/executor-names/remove/" + loop.index0
+          'data-executor-index': loop.index0
         }
       }]
       }
@@ -46,9 +45,9 @@
 rows: summaryListRows
 }) }}
 
-    <p class="govuk-body">{{ content.hintText | safe }}</p>
+    <p class="govuk-body">{{ content.paragraph1 | safe }}</p>
 
-    <p class="govuk-body">{{ content.hintTextDeceasedName | safe }}</p>
+    <p class="govuk-body">{{ content.paragraph2 | safe }}</p>
 
     <ul class="govuk-list govuk-list--bullet">
       <li>{{ content.bullet1 | safe }}</li>
@@ -77,33 +76,16 @@ rows: summaryListRows
             preventDoubleClick: true
         }) }}
     </div>
-<input type="hidden" id="executorsNamedChecked" name="executorsNamedChecked" value="false">
+<input type="hidden" id="hasCoApplicantChecked" name="hasCoApplicantChecked" value="false">
 <script nonce="{{ globals.nonce }}">
   document.addEventListener('DOMContentLoaded', function() {
-    document.querySelectorAll('[data-executor-index]').forEach(function(removeLink) {
-      removeLink.addEventListener('click', function(event) {
-        event.preventDefault();
-        const formAction = event.target.getAttribute('formaction');
-        const form = document.createElement('form');
-        form.method = 'POST';
-        form.action = formAction;
-
-        const csrfInput = document.createElement('input');
-        csrfInput.type = 'hidden';
-        csrfInput.name = '_csrf';
-        csrfInput.value = '{{ csrfToken }}';
-        form.appendChild(csrfInput);
-        document.body.appendChild(form);
-        form.submit();
-      });
-    });
 
     var saveAndContinueButton = document.querySelector('.govuk-button[data-module="govuk-button"]');
     if (saveAndContinueButton) {
       saveAndContinueButton.addEventListener("click", function(e) {
         var optionYes = document.querySelector('input[name="hasCoApplicant"][value="optionYes"]').checked;
         var optionNo = document.querySelector('input[name="hasCoApplicant"][value="optionNo"]').checked;
-        document.getElementById('executorsNamedChecked').value = (optionYes || optionNo) ? "true" : "false";
+        document.getElementById('hasCoApplicantChecked').value = (optionYes || optionNo) ? "true" : "false";
       });
     }
   });
