--- a/app/steps/ui/executors/adoptedout/template.html
+++ b/app/steps/ui/executors/adoptedout/template.html
@@ -15,7 +15,7 @@
                 classes: "govuk-fieldset__legend--l"
             }
         },
-        errorMessage: { text: fields.adoptedOut.errorMessage
+        errorMessage: { text: fields.adoptedOut.errorMessage | replace("{applicantName}", fields.applicantName.value)
             | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.adoptedOut.errorMessage,
         items: [
             {
